2004-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h: Only define HAVE_GLOBALMEMORYSTATUSEX for MSVC
	7.0 and later.

2004-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Ensure that words in the
	scanline are converted to little-endian format on little-endian
	CPUs.

2004-11-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickStrlCat): New function which is
	equivalent to to OpenBSD's strlcat() function.  Concatenates one
	string onto another within a fixed size buffer while ensuring null
	termination.
	(MagickStrlCpy): New function which is equivalent to OpenBSD's
	strlcpy() function.  Copies a string into a fixed size buffer
	while ensuring null termination.
	* coders/gif.c (DecodeImage): Improve handling of corrupt GIF
	files.  Resolves SourceForge bug #1042904.  Also, eliminate a
	potential memory leak.
	* magick/constitute.c (WriteImages): ImageInfo argument is now a
	const pointer.

2004-10-26 Glenn Randers-Pehrson <glennrp@glennrp.com>

	* magick/render.c (TracePath): Applied bugfix from Cristy.

2004-10-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Use
	GlobalMemoryStatusEx if it is available.
	* magick/nt_base.c (lt_dlopen): Handle errors while loading
	modules rather than allow Windows to display a GUI dialog box.
	(NTKernelAPISupported): New function to support testing to see if
	a Windows kernel API is supported.
	* magick/constitute.c (ExportImagePixelArea): Add special-case for
	bilevel gray image in order to restore performance.
	(ImportImagePixelArea): Add special-case for bilevel gray image in
	order to restore performance.
	* coders/jpeg.c (ReadJPEGImage): Fix GCC warning about variable
	being clobbered by longjmp.
	* Re-port build to MinGW. Modules build passes all tests.
	* Skip build and install of modules if a key library is not available.