@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020041107"
+#define public MagickPackageVersionAddendum ".020041108"
 #define public MagickPackageReleaseDate "unreleased"
