@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2004-11-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/constitute.c (DispatchImage): Fix documentation error
+        regarding return status.
+
+</UL>
+<p>
 2004-11-07  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
